# Velo-launcher

./: Cargo.toml  Makefile  README.md  install.sh  uninstall.sh
assets/: velo-launcher.desktop
src/: apps.rs  launch.rs  main.rs  style.css  window.rs
