[package]
name = "velo-launcher"
version = "0.1.0"
edition = "2021"
description = "A Hyprland app launcher with the Velo cockpit aesthetic"

[[bin]]
name = "velo-launcher"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_12"] }
gtk4-layer-shell = "0.8"
glib = "0.22"
gio = "0.22"
fuzzy-matcher = "0.3"
